--- a/aquapi_esphome.yaml
+++ b/aquapi_esphome.yaml
@@ -14,7 +14,7 @@ esphome:
   # This will allow for (future) project identification,
   # configuration and updates.
   project:
-    name: TheRealFalseReality.AquaPiesp32
+    name: TheRealFalseReality.aquapi
     version: "1.0"
 
 esp32:
@@ -32,7 +32,7 @@ ota:
 
 # This should point to the public location of this yaml file.
 dashboard_import:
-  package_import_url: github://TheRealFalseReality/AquaPiesp32/aquapi_esphome.yaml@main
+  package_import_url: github://TheRealFalseReality/aquapi/aquapi_esphome.yaml@main
   import_full_config: true
 
 wifi:
