--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -1,12 +1,12 @@
 # These substitutions allow the end user to override certain values
 substitutions:
   name: "aquapi"
-  # friendly_name: "AquaPi"
+  friendly_name: "AquaPi"
 
 esphome:
   name: "${name}"
   # Friendly names are used where appropriate in Home Assistant
-  # friendly_name: "${friendly_name}"
+  friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
   # so you can use a single firmware for all devices
   name_add_mac_suffix: true
