--- a/calibration_ec.yaml
+++ b/calibration_ec.yaml
@@ -1,4 +1,28 @@
 button:
+  # Output Conductivity
+  - platform: template
+    name: "EC - Output - Salinity"
+    id: ec_cond
+    on_press:
+      then:
+        - lambda: |-
+            id(ec_ezo).send_custom("O,EC,1");
+            id(ec_ezo).send_custom("O,TDS,0");
+            id(ec_ezo).send_custom("O,S,0");
+            id(ec_ezo).send_custom("O,SG,0");
+            
+  # Output TDS
+  - platform: template
+    name: "EC - Output - Specific Gravity"
+    id: ec_tds
+    on_press:
+      then:
+        - lambda: |-
+            id(ec_ezo).send_custom("O,EC,0");
+            id(ec_ezo).send_custom("O,TDS,1");
+            id(ec_ezo).send_custom("O,S,0");
+            id(ec_ezo).send_custom("O,SG,0");
+
   # Get Device Firmware Version
   - platform: template
     name: "EC - Get Information"
