--- a/calibration_ec.yaml
+++ b/calibration_ec.yaml
@@ -1,7 +1,7 @@
 button:
   # Output Conductivity
   - platform: template
-    name: "EC - Output - Salinity"
+    name: "EC - Output - Conductivity"
     id: ec_cond
     on_press:
       then:
@@ -13,7 +13,7 @@ button:
             
   # Output TDS
   - platform: template
-    name: "EC - Output - Specific Gravity"
+    name: "EC - Output - TDS"
     id: ec_tds
     on_press:
       then:
@@ -212,27 +212,3 @@ button:
   #     then:
   #       - lambda: |-
   #           id(ec_ezo).send_custom("O,SG,0");
-
-  # Output Conductivity
-  - platform: template
-    name: "EC - Output - Conductivity"
-    id: ec_cond
-    on_press:
-      then:
-        - lambda: |-
-            id(ec_ezo).send_custom("O,EC,1");
-            id(ec_ezo).send_custom("O,TDS,0");
-            id(ec_ezo).send_custom("O,S,0");
-            id(ec_ezo).send_custom("O,SG,0");
-
-  # Output TDS
-  - platform: template
-    name: "EC - Output - Specific Gravity"
-    id: ec_tds
-    on_press:
-      then:
-        - lambda: |-
-            id(ec_ezo).send_custom("O,EC,0");
-            id(ec_ezo).send_custom("O,TDS,1");
-            id(ec_ezo).send_custom("O,S,0");
-            id(ec_ezo).send_custom("O,SG,0");
