--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -1,21 +1,19 @@
 # These substitutions allow the end user to override certain values
 substitutions:
-  name: "aquapi"
+  name: "project-template"
   # friendly_name: "AquaPi"
 
 esphome:
   name: "${name}"
-  # Friendly names are used where appropriate in Home Assistant
   # friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
   # so you can use a single firmware for all devices
   name_add_mac_suffix: true
-
   # This will allow for (future) project identification,
   # configuration and updates.
   project:
-    name: TheRealFalseReality.aquapi
-    version: "1.031"
+    name: esphome.project-template
+    version: "0.1"
 
 esp32:
   board: esp32dev
