--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -32,7 +32,7 @@ ota:
 # This should point to the public location of this yaml file.
 dashboard_import:
   package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
-  import_full_config: true
+  # import_full_config: true
 
 wifi:
   ap:
