--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -13,7 +13,7 @@ esphome:
   # configuration and updates.
   project:
     name: TheRealFalseReality.aquapi
-    version: "1.1"
+    version: "1.11"
 
 esp32:
   board: esp32dev
@@ -183,26 +183,26 @@ binary_sensor:
     filters:
       - delayed_on: 30ms
 
-# text_sensor:
-#   # Water Level
-#   - platform: template
-#     name: "Water Level"
-#     id: water_level
-#     lambda: |-
-#       if(id(os_high).state == true && id(os_low).state == true) {
-#         // Water Level is High
-#         return {"High"};
-#       }
-#       if(id(os_high).state == false && id(os_low).state == false) {
-#         // Water Level is Low
-#         return {"Low"};
-#       }
-#       if(id(os_high).state == false && id(os_low).state == true) {
-#         // Water Level is Normal
-#         return {"Normal"};
-#       } else {
-#         return {"Uknown or Error"};
-#       }
+text_sensor:
+  # Water Level
+  - platform: template
+    name: "Water Level"
+    id: water_level
+    lambda: |-
+      if(id(os_high).state == true && id(os_low).state == true) {
+        // Water Level is High
+        return {"High"};
+      }
+      if(id(os_high).state == false && id(os_low).state == false) {
+        // Water Level is Low
+        return {"Low"};
+      }
+      if(id(os_high).state == false && id(os_low).state == true) {
+        // Water Level is Normal
+        return {"Normal"};
+      } else {
+        return {"Uknown or Error"};
+      }
 
 button:
   # Soft Restart
