--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -1,22 +1,26 @@
-# These substitutions allow the end user to override certain values
 substitutions:
+  # names
   name: "aquapi"
   friendly_name: "AquaPi"
+
+  # App Version - Updated: 6/2023
+  appVersion: "1.15"
+
+  # pins
   dallasPin: "16"
-  opticalHigh: "33"
-  opticalLow: "32"
+  opticalHighPin: "33"
+  opticalLowPin: "32"
+  sdaPin: "21"
+  sclPin: "22"
 
 esphome:
   name: "${name}"
   friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
-  # so you can use a single firmware for all devices
   name_add_mac_suffix: true
-  # This will allow for (future) project identification,
-  # configuration and updates.
   project:
     name: TheRealFalseReality.aquapi
-    version: "1.14"
+    version: "${appVersion}"
 
 esp32:
   board: esp32dev
@@ -32,7 +36,6 @@ api:
 
 ota:
 
-# This should point to the public location of this yaml file.
 dashboard_import:
   package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
   # import_full_config: true
@@ -52,8 +55,8 @@ improv_serial:
 
 # i2c Pins
 i2c:
-  sda: 21
-  scl: 22
+  sda: ${sdaPin}
+  scl: ${sclPin}
   scan: true
   id: bus_a
 
@@ -72,6 +75,7 @@ sensor:
   - platform: esp32_hall
     name: "ESP32 Hall Sensor"
     update_interval: 60s
+    entity_category: "diagnostic"
 
   # Internal Temp.
   - platform: internal_temperature
@@ -122,14 +126,13 @@ sensor:
     state_class: "measurement"
 
   # Specific Gravity
-  - platform: ezo
-    icon: mdi:shaker-outline
+  - platform: copy 
+    source_id: ec_ezo
     name: "Specific Gravity"
-    id: ec_ezo_sg
-    address: 100
+    filters:
+      - lambda: return x;
     unit_of_measurement: ""
     accuracy_decimals: 3
-    update_interval: 60s
     state_class: "measurement"
 
   # # DHT
@@ -164,7 +167,7 @@ binary_sensor:
   - platform: gpio
     id: os_low
     pin: 
-      number: ${opticalLow}
+      number: ${opticalLowPin}
       inverted: true
       mode:
         input: true
@@ -177,7 +180,7 @@ binary_sensor:
   - platform: gpio
     id: os_high
     pin: 
-      number: ${opticalHigh}
+      number: ${opticalHighPin}
       inverted: true
       mode:
         input: true
@@ -186,18 +189,20 @@ binary_sensor:
     filters:
       - delayed_on: 30ms
 
-text_sensor:
-  # # AquaPi Version
-  # - platform: template
-  #   name: "AquaPi Version"
-  #   id: aquapi_version
-  #   lambda: |-
-  #     version = "${version}"
-      
-  #     return version
+text_sensor: 
+  # AquaPi Version
+  - platform: template
+    name: "AquaPi Version"
+    id: aquapi_version
+    icon: mdi:cellphone-arrow-down
+    update_interval: 600s
+    lambda: |-
+      return {"${appVersion}"};
+    entity_category: "diagnostic"
 
   # Water Level
   - platform: template
+    icon: mdi:waves-arrow-up
     name: "Water Level"
     id: water_level
     lambda: |-
@@ -240,6 +245,7 @@ button:
             id(ec_ezo).send_custom("O,TDS,0");
             id(ec_ezo).send_custom("O,S,1");
             id(ec_ezo).send_custom("O,SG,0");
+    entity_category: "Config"
             
   # Output Specific Gravity
   - platform: template
@@ -252,6 +258,7 @@ button:
             id(ec_ezo).send_custom("O,TDS,0");
             id(ec_ezo).send_custom("O,S,0");
             id(ec_ezo).send_custom("O,SG,1");
+    entity_category: "Config"
 
   # Output Conductivity
   - platform: template
@@ -264,3 +271,4 @@ button:
             id(ec_ezo).send_custom("O,TDS,0");
             id(ec_ezo).send_custom("O,S,0");
             id(ec_ezo).send_custom("O,SG,0");
+    entity_category: "Config"
