added entity category: config for Internal LED

--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -65,6 +65,7 @@ light:
   - platform: status_led
     name: "Internal LED"
     pin: GPIO2
+    entity_category: "Config"
 
 # 18B20 sensor Pin
 dallas:
