--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -313,6 +313,20 @@ text_sensor:
         return {"Uknown or Error"};
       }
 
+  - platform: wifi_info
+    ip_address:
+      name: IP Address
+      icon: mdi:ip-network
+    ssid:
+      name: Connected SSID
+      icon: mdi:wifi-star
+    bssid:
+      name: Connected BSSID
+      icon: mdi:wifi-star
+    mac_address:
+      name: Mac Address
+      icon: mdi:chip
+
 button:
   # Soft Restart
   - platform: restart
