--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -4,7 +4,7 @@ substitutions:
   friendly_name: "AquaPi"
 
   # App Version - Updated: 6/2023
-  appVersion: "1.15.32"
+  appVersion: "1.15.33"
 
   # pins
   dallasPin: "4"
@@ -284,7 +284,7 @@ binary_sensor:
 text_sensor: 
   # Hostname
   - platform: template
-    name: "hostname"
+    name: "Hostname"
     id: hostname
     icon: mdi:cellphone-arrow-down
     update_interval: 600s
